syntax = "proto3";

package hmanAuth;

option go_package = "hmanAuth/gen";

message Tokens {
    string accessToken = 1;
    string refreshToken = 2;pro
}

message LoginInput {
    string username = 1;
    string password = 2;
}

service Auth {
    rpc Login(LoginInput) returns (Tokens);
}


